added config file and dirs for eb

--- a/.ebextensions/02_python.config
+++ b/.ebextensions/02_python.config
@@ -1,7 +1,18 @@
+container_commands:
+  01_migrate:
+    command: "source /opt/python/run/venv/bin/activate && python PubBrain/manage.py migrate --noinput"
+    leader_only: true
+  02_createsu:
+    command: "source /opt/python/run/venv/bin/activate && python PubBrain/manage.py createsu"
+    leader_only: true
+  03_collectstatic:
+    command: "source /opt/python/run/venv/bin/activate && python PubBrain/manage.py collectstatic --noinput"
+
 option_settings:
   "aws:elasticbeanstalk:application:environment":
     DJANGO_SETTINGS_MODULE: "PubBrain.settings"
     "PYTHONPATH": "/opt/python/current/app/PubBrain:$PYTHONPATH"
+	"ALLOWED_HOSTS": ".elasticbeanstalk.com"
   "aws:elasticbeanstalk:container:python":
     WSGIPath: PubBrain/PubBrain/wsgi.py
     NumProcesses: 3
