changed to python27-devel in config

--- a/.ebextensions/01_packages.config
+++ b/.ebextensions/01_packages.config
@@ -4,7 +4,7 @@ packages:
     mysql-devel: []
     numpy: []  
     scipy: []  
-    python-devel: []  
+    python27-devel: []  
     atlas-sse3-devel: []  
     lapack-devel: []  
   container_commands:  
