--- a/.ebextensions/02_python.config
+++ b/.ebextensions/02_python.config
@@ -14,7 +14,7 @@ option_settings:
     "PYTHONPATH": "/opt/python/current/app/PubBrain:$PYTHONPATH"
     "ALLOWED_HOSTS": ".elasticbeanstalk.com"
   "aws:elasticbeanstalk:container:python":
-    WSGIPath: PubBrain/PubBrain/wsgi.py
+    WSGIPath: PubBrain/wsgi.py
     NumProcesses: 3
     NumThreads: 20
   "aws:elasticbeanstalk:container:python:staticfiles":
