--- a/.ebextensions/01_packages.config
+++ b/.ebextensions/01_packages.config
@@ -10,3 +10,6 @@ packages:
     libpng-devel: []
     freetype-devel: []
     zlib-devel: []
+container_commands:  
+  AddGlobalWSGIGroupAccess: 
+    command: "if ! grep -q 'WSGIApplicationGroup %{GLOBAL}' ../wsgi.conf ; then echo 'WSGIApplicationGroup %{GLOBAL}' >> ../wsgi.conf; fi;"
