--- a/.ebextensions/03_apache.config
+++ b/.ebextensions/03_apache.config
@@ -1,3 +1,7 @@
 container_commands:
   01_setup_apache:
     command: "cp .ebextensions/enable_mod_deflate.conf /etc/httpd/conf.d/enable_mod_deflate.conf"
+option_settings:
+  - namespace: aws:elasticbeanstalk:container:python:staticfiles
+    option_name: /static/
+    value: static/
